# llm-from-scratch

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  dockerignore  out.txt  pyproject.toml  requirements.txt  setup.py  temp.py  temp.txt  test.py
benchmarks/: bench_gelu.py
cuda/: attention.cu  attention_cudnn.cpp  cublas_common.h  cuda_common.h  flash_attention.cu  flash_attention.h  matmul.cuh  vector_add.cu  vector_add.h
requirements/: environment.test.yml
src/tricycle/: activation.py  attention.py  blocks.py  context.py  kernels.py  layers.py  optimisers.py  reference_attention.py  tensor.py  utils.py
src/tricycle/cuda/: attention.cpp  cuda_common.h  cudnn_att.h  dense.cu  python_interface.cu  utils.cuh
tests/: test_attention.py  test_layers.py
